# ConceptForge

./: .gitignore  .gitmodules  CMakeLists.txt  ConceptForge-ECS.kdev4  Makefile  OpenGL.kdev4  README.md  imgui.ini
.cache/clangd/index/: IconsFontAwesome6.h.16B31E2D88C84752.idx  ImGuizmo.h.911A491B9046C80B.idx  _fixes.hpp.CD43FC04B18CFA43.idx  _vectorize.hpp.C3160A763B3E109D.idx  asset_browser.cpp.569127403CFB5F66.idx  asset_browser.hpp.8F88C87AEA6E39BF.idx  buffer.h.F21F96A65B25449F.idx  camera.hpp.A3AC8406B080986E.idx  common.cpp.925F319014786687.idx  common.hpp.E0DD520CE939521B.idx  compute_common.hpp.E9801573CE1AC521.idx  compute_vector_decl.hpp.35FA3F6057FAAA10.idx  compute_vector_relational.hpp.0134259FCED11E13.idx  constants.hpp.3E9DFFB2AACF4154.idx  constants.hpp.DB8734FA6612FDF4.idx  constants.inl.B443B9AEB5842938.idx  context.c.B0A82426D2DE9426.idx  cube.cpp.17680306AF60874D.idx  cube.hpp.5E2F30FDC319C36E.idx  dual_quaternion.hpp.AD2D2B5A2D8DD5D2.idx  dual_quaternion.inl.66F0C69A3C4BF1A8.idx  egl_context.c.8768175229B5AE65.idx  entity.cpp.200DFADA42899A0F.idx  entity.hpp.00A6AAAE7A8FDC39.idx  epsilon.hpp.06E25C97D03FC72C.idx  epsilon.inl.265E79F669D0F470.idx  exponential.hpp.E9C2FCF732A2235A.idx  fileloader.cpp.2F0E74694C635918.idx  fileloader.hpp.98D063F3EB7B21BC.idx  func_common.inl.23B251C7D8695382.idx  func_exponential.inl.F34A3445E06D199D.idx  func_geometric.inl.8539D2982089412F.idx  func_integer.inl.E16A377BEACBD0D4.idx  func_matrix.inl.A3A38EBE8C2F2EE3.idx  func_packing.inl.6D422E77CD41A247.idx  func_trigonometric.inl.55E5E8EF7582715E.idx  func_vector_relational.inl.4CFF7467C0BC6A51.idx  fwd.hpp.08064126D6E11CC7.idx  geometric.hpp.947F95C82C203374.idx  gizmo.hpp.996D191664B30F1A.idx  (+250 more)
.github/workflows/: build.yml
.kdev4/: ConceptForge-ECS.kdev4  OpenGL.kdev4
include/: gui.hpp  input.hpp  shaderman.hpp  window.hpp
nanobind/: .b_math.hpp.kate-swp  b_math.cpp  b_math.hpp  concept_forge.cpp  my_ext.cpp
python-scripts/: concept_forge.pyi  imgui.ini  test.py  test3.py  test4.py  test5.py  test6.py
shaders/: border.frag  border.vert  compile.sh  engine.frag  engine.vert  grid.frag  grid.vert  light.frag  lit.frag  lit.vert  picking.frag  picking.vert  point.frag  point.vert  rtShader.frag  rtShader.vert  shader1.frag  shader1.vert  shadow.vert  skybox.frag  skybox.vert  toon.frag  unlit.frag  unlit.vert
src/: VulkanTest  app.cpp  camera.cpp  camera.hpp  constants.hpp  fileloader.cpp  gui.cpp  input.cpp  input.hpp  main  main.cpp  material.cpp  material.hpp  projection.cpp  projection.hpp  setup.cpp  setup.hpp  shaderman.cpp  shaderman.hpp  textureman.hpp  texturemap.cpp  window.cpp  window.hpp
src/Components/: Camera.hpp  Constants.hpp  Fonts.hpp  GPUTimer.hpp  Inspectable.hpp  SSBOHolder.hpp  SceneRoot.hpp  Time.hpp
src/Components/Physics/: BulletPhysics.hpp  Rigidbody.hpp
src/Components/Primitives/: ActiveObject.hpp  Cube.hpp  Grid.hpp  Transform.hpp  UVSphere.hpp
src/Components/RayTracer/: Ray.hpp  RayTracerSettings.hpp  Vec3.hpp
src/Components/Rendering/: DirectionalLight.hpp  FrameBuffer.hpp  GizmoControls.hpp  LightPassFrameBuffer.hpp  Material.hpp  Mesh.hpp  MeshFilter.hpp  MeshRenderer.hpp  PickingBuffer.hpp  PointLight.hpp  Renderer.hpp  Shader.hpp
src/Core/: EventSystem.cpp  EventSystem.hpp  GUISystem.cpp  GUISystem.hpp  GameState.hpp  SSBOManager.cpp  SSBOManager.hpp  WindowManager.cpp  WindowManager.hpp
src/Core/EditorWindows/: Hierarchy.cpp  Hierarchy.hpp  IInspectable.hpp  Inspector.cpp  Inspector.hpp  PythonEditor.cpp  PythonEditor.hpp
src/Core/Physics/: DebugDrawer.cpp  DebugDrawer.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp
src/Core/Utilities/: FileLoader.cpp  FileLoader.hpp
src/Systems/: CameraSystem.cpp  CameraSystem.hpp  Debug.cpp  Debug.hpp  InputSystem.cpp  InputSystem.hpp  LightDepthPassSystem.cpp  LightDepthPassSystem.hpp  PythonRunner.cpp  PythonRunner.hpp  SceneRootSystem.cpp  SceneRootSystem.hpp  SimObjectSystem.cpp  SimObjectSystem.hpp  TimeSystem.cpp  TimeSystem.hpp
src/Systems/Primitives/: CubeSystem.cpp  CubeSystem.hpp  CubemapSystem.cpp  CubemapSystem.hpp  GizmoSystem.cpp  GizmoSystem.hpp  GridSystem.cpp  GridSystem.hpp  PrimitivesSystem.cpp  PrimitivesSystem.hpp  VertexData.hpp
src/Systems/PythonBinding/: BaseBindings.cpp  BaseBindings.hpp
src/Systems/RayTracer/: RayTracer.cpp  RayTracer.hpp
src/Systems/Rendering/: LightDepthPassSystem.cpp  LightDepthPassSystem.hpp  LightSystem.cpp  LightSystem.hpp  MaterialSystem.cpp  MaterialSystem.hpp  MeshSystem.cpp  MeshSystem.hpp  Model.cpp  Model.hpp  PickingPassSystem.cpp  PickingPassSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  ShaderSystem.cpp  ShaderSystem.hpp
src/editor/: asset_browser.cpp  asset_browser.hpp  gizmo.cpp  gizmo.hpp  gui.cpp  gui.hpp  hierarchy.cpp  hierarchy.hpp  inspector.cpp  inspector.hpp  object_creation_menu.cpp  object_creation_menu.hpp
src/primitives/: cube.cpp  cube.hpp  cube_light.cpp  cube_light.hpp  entity.cpp  entity.hpp  light.cpp  light.hpp  light_ssbo.hpp  uv_sphere.cpp  uv_sphere.hpp  vertices_data.hpp
